--- a/curso-jdev-treinamento/src/main/resources/application.properties
+++ b/curso-jdev-treinamento/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
                              
+#Contexto para saber qual projeto é
+server.servlet.context-path=/springboot-rest-api-sample
+                             
 server.address=0.0.0.0
 server.port=8000
 
