--- a/curso-jdev-treinamento/src/main/resources/application.properties
+++ b/curso-jdev-treinamento/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Spring Boot server configuration
 
-spring.datasource.url= jdbc:postgresql://localhost:5433/spring-boot-serie-jdevtreinamento
+spring.datasource.url= jdbc:postgresql://localhost:5433/rodrigo
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
                              
 #Contexto para saber qual projeto é
-server.servlet.context-path=/springboot-rest-api-sample
+server.servlet.context-path=/app
                              
 server.address=0.0.0.0
 server.port=8000
@@ -18,3 +18,4 @@ server.port=8000
 #Open "http://0.0.0.0:8000/h2-console" and hit "Connect" button
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
